--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
         </div>
         <script src="lib/jquery/jquery-1.11.0.min.js"></script>
-		<script src=".lib/jquery-number/jquery.number.min.js"></script>
+		<script src="lib/jquery-number/jquery.number.min.js"></script>
 		<script src="lib/bootstrap-3.1.1/dist/js/bootstrap.js"></script>
 		<script type="text/javascript" src="js/host.js"></script>
 		<script type="text/javascript" src="../lib/Leaflet-0.7.2/dist/leaflet-src.js"></script>
