Fixing Leaflet js url

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		<script src="lib/jquery-number/jquery.number.min.js"></script>
 		<script src="lib/bootstrap-3.1.1/dist/js/bootstrap.js"></script>
 		<script type="text/javascript" src="js/host.js"></script>
-		<script type="text/javascript" src="../lib/Leaflet-0.7.2/dist/leaflet-src.js"></script>
+		<script type="text/javascript" src="lib/Leaflet-0.7.2/dist/leaflet-src.js"></script>
         <script src="lib/leaflet-sidebar/src/L.Control.Sidebar.js"></script>
 		<script type="text/javascript" src="js/map.js"></script>
         <script>
