--- a/index.html
+++ b/index.html
@@ -15,19 +15,50 @@
 		<link href="lib/bootstrap-3.1.1/dist/css/bootstrap.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="lib/Leaflet-0.7.2/dist/leaflet.css" />
 		<link rel="stylesheet" href="lib/leaflet-sidebar/src/L.Control.Sidebar.css">
-		<link rel="stylesheet" href="../lib/Leaflet.markercluster/dist/MarkerCluster.css" />
-		<link rel="stylesheet" href="../lib/Leaflet.markercluster/dist/MarkerCluster.Default.css" />
+		<link rel="stylesheet" href="lib/Leaflet.markercluster/dist/MarkerCluster.css" />
+		<link rel="stylesheet" href="lib/Leaflet.markercluster/dist/MarkerCluster.Default.css" />
 		<link rel="stylesheet" href="css/main.css" />
 		<!-- Custom styles for this template -->
         <style>
-			.marker-cluster-small {
-				background-color: rgba(217, 121, 37, 0.75);
+			.leaflet-marker-icon {
+				margin-top: -40px;
+				margin-left: -13px;
 			}
-			.marker-cluster-medium {
-				background-color: rgba(217, 121, 37, 0.75);
+			.marker-cluster {
+				box-shadow: 1px 1px 5px #1c1c1c;
+				border-radius: 30px;
+				}
+			.marker-cluster  div {
+				margin-left: 0px;
+				margin-top: 0px;
+				border-radius: 30px;
 			}
-			.marker-cluster-large {
-				background-color: rgba(217, 121, 37, 0.75);
+			.marker-cluster  span {
+				font-family: "Trebuchet MS", Helvetica, sans-serif !important;
+				color: white;
+				font-weight: 600;
+				text-shadow: 1px 1px 1px #1c1c1c;
+			}
+			.marker-cluster-small  span {
+				font-size: 10px;
+				line-height: 22px;
+			}
+			.marker-cluster-medium  span {
+				font-size: 12px;
+				line-height: 28px;
+			}
+			.marker-cluster-large  span {
+				font-size: 14px;
+				line-height: 36px;
+			}
+			.marker-cluster .savingLives {
+				background-color: red;
+			}
+			.marker-cluster .promotingProsperity {
+				background-color: blue;
+			}
+			.marker-cluster .securingPeace {
+				background-color: blue;
 			}
         </style>
 
@@ -98,7 +129,7 @@
 		<script type="text/javascript" src="js/host.js"></script>
 		<script type="text/javascript" src="lib/Leaflet-0.7.2/dist/leaflet-src.js"></script>
         <script src="lib/leaflet-sidebar/src/L.Control.Sidebar.js"></script>
-		<script src="../lib/Leaflet.markercluster/dist/leaflet.markercluster-src.js"></script>
+		<script src="lib/Leaflet.markercluster/dist/leaflet.markercluster-src.js"></script>
 		<script type="text/javascript" src="js/map.js"></script>
         <script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
